--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-simple-website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>himi</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste tempore incidunt molestias excepturi laboriosam deleniti animi, omnis consequuntur iusto. Magni cumque debitis sunt voluptas deserunt ad ut perspiciatis amet labore!</p>
+    </div>
 </body>
 </html>
