added my files2

--- a/index2.html
+++ b/index2.html
@@ -11,5 +11,13 @@
         <h3>himi</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste tempore incidunt molestias excepturi laboriosam deleniti animi, omnis consequuntur iusto. Magni cumque debitis sunt voluptas deserunt ad ut perspiciatis amet labore!</p>
     </div>
+    <div>
+        <h3>himi 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste tempore incidunt molestias excepturi laboriosam deleniti animi, omnis consequuntur iusto. Magni cumque debitis sunt voluptas deserunt ad ut perspiciatis amet labore!</p>
+    </div>
+    <div>
+        <h3>himi 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste tempore incidunt molestias excepturi laboriosam deleniti animi, omnis consequuntur iusto. Magni cumque debitis sunt voluptas deserunt ad ut perspiciatis amet labore!</p>
+    </div>
 </body>
 </html>
