--- a/index2.html
+++ b/index2.html
@@ -19,5 +19,13 @@
         <h3>himi 3</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste tempore incidunt molestias excepturi laboriosam deleniti animi, omnis consequuntur iusto. Magni cumque debitis sunt voluptas deserunt ad ut perspiciatis amet labore!</p>
     </div>
+    <div>
+        <h4>How to push files</h4>
+        <oi>
+            <li>git add .</li>
+            <li>git commit -m"a meaningfull comment"</li>
+            <li>git push -u origin main</li>
+        </oi>
+    </div>
 </body>
 </html>
